<?xml version="1.0"?>
<package>
  <name>fsm</name>
  <version>0.0.0</version>
  <description>High level finite state machine package</description>

  <maintainer email="mattwilsonmbw@gmail.com">Matt Wilson</maintainer>
  <author email="mattwilsonmbw@gmail.com">Matt Wilson</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aruco_mapping</build_depend>
  <build_depend>aruco_ros</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>aruco_mapping</run_depend>
  <run_depend>aruco_ros</run_depend>
  <run_depend>rospy</run_depend>


  <export>
  </export>
</package>
